# Stainalyzer

./: .gitignore  MANIFEST.in  README.md  clean.sh  datapath.py  pyproject.toml  requirements-dev.txt  requirements.txt  rsync.sh  setup.py  singularity.def  tox.ini
Stainalyzer/: __init__.py  __main__.py  core.py  dirichlet.py  distribution.py  filters.py  main.py  pixel.py  preprocessor.py  test.py  tester.py  trainer.py  utils.py  visualizations.py
__notes6/: correlation_analysis.r
data/: DAB_Controle_Clean.txt  DAB_Grupo_Controle.txt  DAB_Grupo_Controle_Clean.txt  DAB_Grupo_Controle_Correspondence_1.txt  DAB_IMIP_Tratamento.txt  DAB_IMIP_Tratamento_Clean.txt  DAB_Tratamento_Clean.txt  apply_to_clean_1.sh  check.py  cocoon.sh  fetch_dab_control_data.pbs  smart_unzipper.sh  transferlyzation.pbs  transferlyzation.sh  uncompress.pbs
examples/: cluster_debugging.py  cornucopia.py  dab_distribution.py  deconvolution.py  hyperballad.py  hypertraining.py  hypertraining6.py  pixelize.py  standardize_to_tiff.py  supercalifragilisticexpialidocious.py  supercolider.py  supercolider2.py  supercolider4.py  supercolider5.py  test_parallelization.py  weighted_sum_optimization_with_constraints.py
installer/: 1_uninstall.pbs  2_install_mac.sh  2_uninstall_gpu.pbs  3_check_torch.py  3_install_gpu.pbs  4_reinstall_cpu.pbs  5_1_check_mmop_gpu.pbs  install_gpu.out  uninstall.out
notebooks/: big_heatmap.ipynb  cellpose.ipynb  distribution_boxplot.ipynb  real_esrgan.ipynb  stardist.ipynb  zoe_depth.ipynb
stainalyzer/: __init__.py  __main__.py  __version__.py  filters.py
(+162 files in other folders)
